- Fixes to touch support   * Improved touchstart handling so that it doesn't unnecessarily trigger when rappidly swiping   * Slight code refactor - Misc CSS tweaks   * Play/Pause button larger   * Various margin spacing tweaks

--- a/css/customUI.css
+++ b/css/customUI.css
@@ -160,7 +160,7 @@
   height: 60px;
   left: 0px;
   right: 0px;
-  bottom: 0px;
+  bottom: 6px;
   width: auto;
   z-index: 19;
   -webkit-user-select: none;
@@ -207,16 +207,16 @@
 .timeText {
   position: absolute;
   top: 0px;
-  left: 41px;
+  left: 52px;
   width: 60px;
-  height: 21px;
-  font-size: 16pt;
+  height: 28px;
+  font-size: 18pt;
   box-shadow: 2px 2px 3px rgba(0,0,0,0.3);
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 5px;
   padding-bottom: 5px;
-  padding-left: 37px;
-  padding-right: 0px;
+  padding-left: 38px;
+  padding-right: 6px;
   color: #656565;
   font-weight: normal;
   background-color: white;
@@ -319,10 +319,10 @@
 
 .customToggleSpeed.ui-button {
   position: absolute;
-  width: 55px;
-  height: 23px;
-  top: 30px;
-  left: 75px;
+  width: 65px;
+  height: 25px;
+  top: 35px;
+  left: 83px;
   background: white;
   border: 1px solid #656565;
   border-radius: 3px !important;
@@ -350,9 +350,9 @@
 
 .customPlay.ui-button {
   position: absolute;
-  width: 50px;
-  height: 50px;
-  bottom: 20px;
+  width: 60px;
+  height: 60px;
+  bottom: 10px;
   left: 20px;
   background: white;
   border: 1px solid #656565;
